# ATS-RESUME-SCORE

./: README.md  app.py  pyproject.toml
static/css/: style.css
templates/: index.html
uploads/: AI-Powered_Plant_Disease_Detection_-_Copy.docx
