[project]
name = "resume-score"
version = "0.1.0"
description = "This project is about ATS score of resume"
authors = [
    {name = "HemanathanSuriya"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask (>=3.1.1,<4.0.0)",
    "sentence-transformers (>=5.0.0,<6.0.0)",
    "pymupdf (>=1.26.3,<2.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)"
   
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
